# nsw-with-optimal-transport

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run.sh
.github/workflows/: ruff.yml
conf/: main.yaml
conf/generator/: base_size.yaml  base_size_cluster.yaml  base_size_item.yaml  base_size_real.yaml  base_size_user.yaml  size1.yaml  size2.yaml  size3.yaml  size4.yaml  size5.yaml  size6.yaml
conf/optimizer/: clustered_expo_fair.yaml  clustered_ot_nsw.yaml  expo_fair.yaml  greedy.yaml  greedy_nsw.yaml  ot_nsw.yaml  pg_ot_nsw.yaml  pgd_nsw.yaml
notebook/: base_plot.ipynb  greedy_clustering.ipynb  plot.ipynb  varying_data_size.ipynb  varying_item_size.ipynb  visualize_loss_landscape.ipynb  visualize_ot_nsw_history.ipynb  visualize_sinkhorn.ipynb  提供者を考慮した実験.ipynb
run/: main.py
run/conf/: main.yaml
run/conf/optimizer/: clustered_nsw.yaml  clustered_ot_nsw.yaml  greedy.yaml  nsw.yaml  ot_nsw.yaml
src/: __init__.py  conf.py  evaluator.py  generator.py
src/generators/: __init__.py  _factory.py  _pyxclib_utils.py  _registry.py  base.py  real.py  synthetic.py
src/optimizer/: base.py  common.py  greedy.py  nsw.py  ot_osw.py
src/optimizers/: __init__.py  _factory.py  _ot_utils.py  _registry.py  base.py  expo_fair.py  greedy.py  greedy_nsw.py  nsw.py  ot_nsw.py  ot_osw.py  pgd_nsw.py
tools/: export_result.py
