[project]
name = "nsw-with-optimal-transport"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Yuki Uehara", email = "s2320413@u.tsukuba.ac.jp" }
]
dependencies = [
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "tqdm>=4.65.0",
    "torch==2.1.1+cu121",
    "joblib>=1.3.1",
    "pyyaml>=6.0.1",
    "types-PyYAML>=6.0.12.11",
    "hydra-core>=1.3.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "polars>=0.18.9",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "cvxpy[MOSEK]>=1.4.1",
    "pytorch_lightning>=2.1.2",
    "wandb>=0.16.0",
    "seaborn>=0.13.0",
    "japanize_matplotlib>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []

[tool.ruff]
include = ["*.ipynb"]
line-length = 99


[tool.hatch.metadata]
allow-direct-references = true
