[project]
name = "nsw-with-optimal-transport"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Yuki Uehara", email = "s2320413@u.tsukuba.ac.jp" }]
dependencies = [
    "numpy>=1.24.4",
    "torch==2.1.1+cu121",
    "hydra-core>=1.3.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "cvxpy[MOSEK]>=1.4.1",
    "pytorch_lightning>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "japanize_matplotlib>=1.1.3",
    "wandb>=0.16.6",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []

[tool.ruff]
include = ["*.ipynb", "*.py"]
line-length = 99


[tool.hatch.metadata]
allow-direct-references = true
