[project]
name = "nsw-with-optimal-transport"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Yuki Uehara", email = "s2320413@u.tsukuba.ac.jp" }]
dependencies = [
    "numpy>=1.24.4",
    "hydra-core>=1.3.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "cvxpy[MOSEK]>=1.4.1",
    "loguru>=0.7.2",
    "lightning>=2.2.4",
    "torch==2.3.0+cu121",
    "cython>=3.0.10",
]
readme = "README.md"
requires-python = ">= 3.11"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "japanize_matplotlib>=1.1.3",
    "wandb>=0.16.6",
    "mypy==1.6.1",
]

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff]
include = ["*.ipynb", "*.py"]
line-length = 99


[tool.hatch.metadata]
allow-direct-references = true
